# cityhash

./: BUCK  BUILD  CMakeLists.txt  README.md  cityhash.podspec
Android/: CMakeLists.txt
src/: CMakeLists.txt  city.cc
src/testcity128/: CMakeLists.txt  testHash.cpp
win/: cityhash_2013.sln  cityhash_2013.vcxproj  cityhash_2013.vcxproj.filters  cityhash_vs2015.vcxproj
